# ephys_toolbox

./: README.md  __init__.py  features.csv  pyproject.toml
data/: 2025_03_06_0000.abf
data/2025_03_06_0000/results/: 2025_03_06_0000.csv  2025_03_06_0000.tsv
data/eval_data/: 2024_07_22_0000_NORM.abf  2024_07_22_0003_NORM.abf  2024_07_23_0000_NORM.abf  2024_07_23_0002_NORM.abf  2024_07_23_0004_NORM.abf  2024_07_24_0000_NORM.abf  2024_07_24_0001_NORM.abf  2024_07_24_0003_NORM.abf  2024_07_29_0000.abf  2024_07_29_0002.abf
data/eval_data/2024_07_22_0000_NORM/results/: 2024_07_22_0000_NORM.tsv
data/eval_data/2024_07_22_0003_NORM/results/: 2024_07_22_0003_NORM.tsv
data/eval_data/2024_07_23_0000_NORM/results/: 2024_07_23_0000_NORM.tsv
data/eval_data/2024_07_23_0002_NORM/results/: 2024_07_23_0002_NORM.tsv
data/eval_data/2024_07_23_0004_NORM/results/: 2024_07_23_0004_NORM.tsv
data/eval_data/2024_07_24_0000_NORM/results/: 2024_07_24_0000_NORM.tsv
data/eval_data/2024_07_24_0001_NORM/results/: 2024_07_24_0001_NORM.tsv
data/eval_data/2024_07_24_0003_NORM/results/: 2024_07_24_0003_NORM.tsv
deprecated/: ephys_tools (1).py  normalize_abf.py  tidy_abf.ipynb
production/: cli.py  comparison.py  ephys_runner.py  epsp.py  fiber_volley.py  plots.py  pop_spike.py  read_write.py  results.py  stim_artifact.py  utils.py
src/: __init__.py  analyzers.py  cli.py  ephys_tools.py  epsp.py  fiber_volley.py  normalize_abf.py  pipeline.py  plots.py  pop_spike.py  read_write.py  results.py  stim_artifact.py  test.py  tidy_abf.ipynb  tidy_abf_matlab.txt  utils.py
(+2 files in other folders)
